# stats_outlier

./: CMakeLists.txt  README.md
src/: mad.cpp  main.cpp  ransac.cpp
